Set width on comment mod batch dropdown
Prevents the checkbox and menu widget from stacking on top of each other.

--- a/opentreemap/treemap/css/sass/partials/pages/_moderation.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_moderation.scss
@@ -99,6 +99,10 @@
             }
         }
 
+        th.selector > .btn-group {
+            width: 63px;
+        }
+
         th.actions {
             min-width: 200px;
         }
