Show comment flagging link inline
The vertical bars implied that the date, reply link, and flag link
should all appear on the same line.

--- a/opentreemap/treemap/css/sass/partials/pages/_comments.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_comments.scss
@@ -29,6 +29,10 @@
                 .comment_data {
                     float: right;
 
+                    div {
+                        display: inline;
+                    }
+
                     .comment_reply_link {
 
                     }
