Add validation to prevent adding features outside the instance
 - The add tree process will return to the first step that had an error
 - For convenience, geom errors are returned as "mapFeature.geom"
 - On the plot detail, geom errors are at the top of the form

Fixes #1625

--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -5,7 +5,7 @@
 <div class="sidebar-inner">
     <a href="javascript:;" class="close cancelBtn small">×</a>
     <h3>Add a Tree</h3>
-    <div class="add-step-container">
+    <div class="add-step-container" id="add-tree-container">
         {% include "treemap/partials/step_set_location.html" with first=True feature_name="tree" %}
         <div class="add-step">
             <div class="add-step-header">{% trans "Add species and additional info" %}</div>
