Fix photo review accept/reject and pagination JS.
Design changes broke JS selectors.  I fixed the pagination selectors by
removing 'ul' from the selector, and I added data attributes to the
elements used by accept/reject to hopefully make them less brittle.

Fixes #1639, Fixes #1640

--- a/opentreemap/treemap/templates/treemap/partials/photo_review.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo_review.html
@@ -1,6 +1,7 @@
 {% load i18n %}
 
-<div class="row">
+{# JS stuffs the next photo into [data-photo-container], so it should be the container around each photo.html #}
+<div class="row" data-photo-container>
   {% for photo in photos %}
   {% include "treemap/partials/photo.html" %}
   {% endfor %}
