--- a/opentreemap/treemap/css/sass/partials/pages/_moderation.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_moderation.scss
@@ -147,6 +147,9 @@
                 display: inline;
             }
         }
+        .user-link {
+            display: block;
+        }
     }
 
     .pagination {
