Pull comments JS out of mapFeature.js and add AJAX posting of comments
In order to avoiding having to changing core parts of the Django comments
app or bringing in another commenting library like django-fluent-comments,
this gets the *entire* plot detail page when adding a comment, and then
strips out the comment section from it and replaces that HTML content.

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -254,7 +254,7 @@ var mapFeatureOptions = {
 
 <script>
 (function(require) {
-    require('otm_comments/flagging')();
+    require('otm_comments/comments')(otm.settings, '#comments-container');
 })(require);
 </script>
 
