--- a/opentreemap/treemap/templates/treemap/partials/collection_udf_row.html
+++ b/opentreemap/treemap/templates/treemap/partials/collection_udf_row.html
@@ -6,15 +6,17 @@
    {% endif %}
    >
   {% for field in udf.datatype_dict %}
-  <td>
   {% with field_value=value|get:field.name %}
     {% if field.type == "date" %}
-    {{ field_value|date:request.instance.short_date_format }}
-    {% else %}
-    {{ field_value }}
+    <td data-value="{{ field_value|date:"Y-m-d" }}">
+      {{ field_value|date:request.instance.short_date_format }}
+    </td>
+      {% else %}
+    <td data-value="{{ field_value }}">
+      {{ field_value }}
+    </td>
     {% endif %}
   {% endwith %}
-  </td>
   {% endfor %}
   <td></td>
 </tr>
