Fix big in nested translation instruction
The inner trans block was rendering straight to the client as is, due to
the blocktrans.

--- a/opentreemap/treemap/templates/treemap/partials/plot_eco.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_eco.html
@@ -11,7 +11,7 @@
   {% blocktrans %}
   <!-- TODO: When the ecoservice returns structured errors, replace this with real conditions -->
   <!-- Or, maybe always leave this to avoid 500s -->
-  <p>{% trans "We were unable to calculate ecosystem benefits for this tree."}</p>
+  <p>We were unable to calculate ecosystem benefits for this tree.</p>
   {% endblocktrans %}
 {% elif benefits.plot %}
 <table class="table table-hover">
