--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -47,6 +47,11 @@
         }
     }
 
+    .alert{
+        padding: 15px;
+        margin-top: 42px;
+    }
+
     .form-horizontal {
         .control-label {
             float: left;
