Bulk Upload Prototype
For the file upload fields I used a text based field rather than the
<input type=“file”> so it looks better.  However, if we can’t get this
style to work with the upload functionality we will need to sync up to
see what our options are.

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -35,3 +35,4 @@
 @import "partials/pages/modeling";
 @import "partials/pages/scenarios";
 @import "partials/pages/moderation";
+@import "partials/pages/importer";
