Speed up audit processing on user profile
Prefetch instance to remove additional queries object_cache lookups by
instance

Use object caches for audit display_name

This cuts out 35 queries for an admin user on my dev box with about 15
instances. Brings the in-database time down from ~350ms to ~160 ms.

--- a/opentreemap/treemap/templates/treemap/edits.html
+++ b/opentreemap/treemap/templates/treemap/edits.html
@@ -64,10 +64,10 @@ active
           <td>
             {% if audit.model|is_filterable_audit_model %}
             <a href="?models={{ audit.model }}">
-              {{ audit.model|display_name }}
+              {{ audit|display_name }}
             </a>
             {% else %}
-            {{ audit.model|display_name }}
+            {{ audit|display_name }}
             {% endif %}
           </td>
           <td>
