Move plot add to separate js and fix issues
fixes #1717 on github
fixes #1375 on github
fixes #1027 on github

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -132,8 +132,7 @@
           plotId: {{ plot.id }},
           treePresenceSection: '#tree-presence-section',
           beginAddTree: '#begin-add-tree',
-          cancelAddTree: '#cancel-add-tree',
-          addTreeSection: '#add-tree-section',
+          addTreeControls: '#add-tree-controls',
           treeSection: '#tree-details',
           inlineEditForm: mapFeatureOptions.inlineEditForm,
           form: mapFeature.inlineEditForm,
