--- a/opentreemap/treemap/templates/treemap/partials/plot_detail_add_tree.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_detail_add_tree.html
@@ -3,18 +3,17 @@
 {% load auth_extras %}
 {% load form_extras %}
 
-<div id="add-tree-section" {{ has_tree|yesno:"style=display:none;," }}>
-  <div class="alert alert-warning" id="no-tree-message">
-    <p>{% trans "There is no tree for this planting site." %}</p>
-    {% usercancreate tree %}
-    <a href="javascript:;" id="add-tree" class="btn btn-warning" style="display: none;">{% trans "Add Tree" %}</a>
-    <a href="javascript:;" id="cancel-add-tree" class="btn" style="display: none;">{% trans "Cancel Adding Tree" %}</a>
-
+<!-- Add a Tree Section -->
+<div class="alert alert-warning" id="tree-presence-section" {{ has_tree|yesno:"style=display:none;," }}>
+  <p>{% trans "There is no tree for this planting site." %}</p>
+  {% usercancreate tree %}
+  <div id="add-tree-controls" {% if not editmode %}style="display:none;"{% endif %}>
+    <a href="javascript:;" id="begin-add-tree" class="btn btn-warning" style="display: none;">{% trans "Add Tree" %}</a>
     {# Hidden id fields for use in creating a new tree #}
     {% create from "Tree.plot" for request.user in request.instance withtemplate "treemap/field/hidden.html" %}
     {% localize off %}
     {% field from "plot.id" for request.user withtemplate "treemap/field/hidden.html" %}
     {% endlocalize %}
-    {% endusercancreate %}
   </div>
+  {% endusercancreate %}
 </div>
