fixes OpenTreeMap/otm2-addons#262

--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -138,6 +138,10 @@
         .thumbnail img {
             width: 100%;
             height: auto;
+
+            @media (min-width: 992px){
+                height: 240px;
+            }
         }
     }
 }
