--- a/opentreemap/treemap/css/sass/partials/pages/_comments.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_comments.scss
@@ -20,6 +20,10 @@
                 margin: 15px 0 10px !important;
             }
 
+            .deactive{
+                opacity: .5;
+            }
+
             .comment_info {
                 font-size: 1.2rem;
 
