Update plot_detail header when plot/tree changes
fixes #1715 on github
fixes #861 on github
improves #1719 on github, but does not fix it.

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -61,8 +61,8 @@
     <div class="col-md-9">
       <div class="detail-header">
         <button class="btn share hidden">Share</button>
-        <h2 class="common-name">{{ title }} <i id="favorite-star" class="icon-star-empty hidden"></i></h2>
-        <h4 class="address">{{ feature.address_full }}</h4>
+        <h2 class="common-name" id="map-feature-title">{{ title }} <i id="favorite-star" class="icon-star-empty hidden"></i></h2>
+        <h4 class="address" id="map-feature-address">{{ feature.address_full }}</h4>
       </div>
       <div class="row">
         <div class="col-md-8">
