--- a/opentreemap/importer/templates/importer/partials/list.html
+++ b/opentreemap/importer/templates/importer/partials/list.html
@@ -1,24 +1,24 @@
-<div id="importer">
   <div class="contained topper">
     <div>
       <div class="col-md-12">
         <div>
           <div>
             <div class="row top-pad-lg">
-              {% url 'importer:create' instance_url_name=request.instance.url_name as create_url %}
               <div class="col-md-6">
                 <div class="well">
-                  <form id="treeform" method="POST" action="{{ create_url }}" enctype="multipart/form-data">
-                    <input type="hidden" name="type" value="tree"></input>
+                  <h4>Tree Import</h4>
+                  <form id="import-trees-form">
+                    {% csrf_token %}
+                    <input type="hidden" name="type" value="tree">
                     <input name="unit_plot_length" value="1" type="hidden">
                     <input name="unit_plot_width" value="1" type="hidden">
                     <input name="unit_diameter" value="1" type="hidden">
                     <input name="unit_tree_height" value="1" type="hidden">
                     <input name="unit_canopy_height" value="1" type="hidden">
                     <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Upload Trees">
+                      File to Upload: <input type="file" name="file">
                       <span class="input-group-btn">
-                        <button class="btn btn-info" type="button">Import</button>
+                        <button class="btn btn-info" type="submit" disabled>Import</button>
                       </span>
                     </div><!-- /input-group -->
                   </form>
@@ -26,12 +26,14 @@
               </div>
               <div class="col-md-6">
                 <div class="well">
-                  <form id="speciesform" method="POST" action="{{ create_url }}" enctype="multipart/form-data">
-                    <input type="hidden" name="type" value="species"></input>
+                  <h4>Species Import</h4>
+                  <form id="import-species-form">
+                    {% csrf_token %}
+                    <input type="hidden" name="type" value="species">
                     <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Upload Species">
+                      File to Upload: <input type="file" name="file">
                       <span class="input-group-btn">
-                        <button class="btn btn-info" type="button">Import</button>
+                        <button class="btn btn-info" type="submit" disabled>Import</button>
                       </span>
                     </div><!-- /input-group -->
                   </form>
@@ -41,223 +43,50 @@
 
             <div class="row">
               <div class="col-md-12">
+                <img src="/static/img/spinner.gif" class="spinner pull-left" style="display:none;">
                 <h2 class="top-pad-lg">Imports</h2>
                 <hr>
 
-                <!-- Active Tree Imports-->
-
                 <h4>Active Tree Imports</h4>
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th>Import Event</th>
-                      <th>Status</th>
-                      <th>Rows</th>
-                      <th>View</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  </tbody>
-                </table>
+                {% include 'importer/partials/import_table.html' with things=trees_active id="activetree" link="tree" %}
               </div>
             </div>
 
             <br>
-
-            <!-- Finished Tree Imports-->
 
             <div class="row">
               <div class="col-md-12">
                 <h4>Finished Tree Imports</h4>
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th>Import Event</th>
-                      <th>Status</th>
-                      <th>Rows</th>
-                      <th>View</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  </tbody>
-                </table>
+                {% include 'importer/partials/import_table.html' with things=trees_finished id="finishedtree" link="tree" %}
               </div>
-            </div> <!-- END Finished Tree Imports-->
+            </div>
 
             <br>
-
-            <!-- Active Species Imports-->
 
             <div class="row">
               <div class="col-md-12">
                 <h4>Active Species Imports</h4>
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th>Import Event</th>
-                      <th>Status</th>
-                      <th>Rows</th>
-                      <th>View</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  </tbody>
-                </table>
+                {% include 'importer/partials/import_table.html' with things=species_active id="activespecies" link="species" %}
               </div>
             </div>
 
             <br>
 
-            <!-- Finished Tree Imports-->
-
             <div class="row">
               <div class="col-md-12">
                 <h4>Finished Species Imports</h4>
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th>Import Event</th>
-                      <th>Status</th>
-                      <th>Rows</th>
-                      <th>View</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  <tr>
-                    <td>Tree Import # 1447655</td>
-                    <td>Verification Complete</td>
-                    <td>99999</td>
-                    <td><a href="#">Export</a> | <a href="#">View</a></td>
-                  </tr>
-                  </tbody>
-                </table>
+                {% include 'importer/partials/import_table.html' with things=species_finished id="finishedspecies" link="species" %}
               </div>
             </div>
 
             <div class="row">
               <div class="col-md-12">
-                <h2 class="top-pad-lg">Merge Species</h2>
+                <h2 class="top-pad-lg">Export</h2>
                 <hr>
-                <div>
-                  <div id="merge-errors"></div>
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <label>Remove species:</label>
-                      <select class="form-control" id="species-to-remove">
-                        <option value="{{ s.pk }}">Something</option>
-                      </select>
-                    </div>
-
-                    <div class="col-md-6">
-                      <label>Replace with:</label>
-                      <select class="form-control" id="species-to-update-to">
-                        <option value="{{ s.pk }}">Something</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="row top-pad-sm">
-                    <div class="col-md-12">
-                      <button id="merge-species" class="btn btn-info">Merge</button>
-                    </div>
-                  </div>
-
-
-
-                  <h2 class="top-pad-lg">Export</h2>
-                  <hr>
-                  <a href="{{ SITE_ROOT }}importer/export/species/all" class="btn btn-info">Export All Species <i class="icon-forward"></i></a>
-                </div>
+                <a href="{% url 'importer:export_all_species' instance_url_name=request.instance.url_name %}" class="btn btn-info">
+                  Export All Species
+                  <i class="icon-forward"></i>
+                </a>
               </div>
             </div>
 
@@ -266,4 +95,3 @@
       </div>
     </div>
   </div> <!-- END CONTAINER -->
-</div> <!-- END IMPORTER -->
