Rename `list.html` as `imports.html`

--- a/opentreemap/importer/templates/importer/imports.html
+++ b/opentreemap/importer/templates/importer/imports.html
@@ -4,5 +4,5 @@
 {% block page_title %} | {% trans "Import Data" %} {% endblock %}
 
 {% block content %}
-  {% include "importer/partials/list.html" %}
+  {% include "importer/partials/imports.html" %}
 {% endblock content %}
