Implement importer "Status" view
* An import event's "View" link loads status info (categorized, paged, and scrollable) for all rows
* From status view, "Back to Uploads" returns to the main "imports" view
* In status rows, highlight cells whose fields had errors or warnings
* For tree imports eliminate "Pending" panel and rename "Tree Watch" as "Warnings"

Refactoring:
* Use server-side templates for everything
* Use `Paginator` instead of homegrown pagination
* Move common row status codes to GenericImportRow
* Extract client-side templates to `clientside_templates.html` (hopefully we'll eliminate most of them)

Also:
* Temporarily include otm1.js for reference

--- a/opentreemap/importer/templates/importer/partials/import_table.html
+++ b/opentreemap/importer/templates/importer/partials/import_table.html
@@ -28,13 +28,9 @@
                 {% elif ie.is_finished %}
                     <td>{{ count }}</td>
                     <td>
-                      <a href="{{ SITE_ROOT }}importer/export/{{ link }}/{{ ie.pk }}">
-                        Export
-                      </a>
+                      <a href="{% url 'importer:status' import_type=import_type import_event_id=ie.pk instance_url_name=request.instance.url_name %}">View</a>
                       |
-                      <a href="{{ SITE_ROOT }}importer/status/{{ link }}/{{ ie.pk}}">
-                        View
-                      </a>
+                      <a href="javascript:;">Export</a>
                     </td>
                 {% else %}
                     <td></td>
