--- a/opentreemap/treemap/css/sass/partials/pages/_importer.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_importer.scss
@@ -11,4 +11,12 @@
    .top-pad-lg{
         padding-top: 50px;
     }
+
+   td.error {
+        background-color: #f2dede;
+   }
+
+   td.warning {
+        background-color: #fdef8d;
+   }
 }
