--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -117,35 +117,39 @@
   {% include "udfc_search.html" %}
 
   <div class="stats-bar">
-    <div style="display: inline;" id="tree-and-planting-site-counts">
+    <div class="half">
+      <div style="display: inline;" id="tree-and-planting-site-counts">
+      </div>
+      {% block subhead_exports %}
+        {% if request.instance|feature_enabled:'exports' %}
+        <a href="javascript:;" class="btn btn-primary btn-xs exportBtn"
+           data-export-start-url="{% url 'begin_export' instance_url_name=request.instance.url_name model='tree' %}">
+          <i class="icon-export"></i> {% trans "Export Search Results" %}
+        </a>
+        {% endif %}
+      {% endblock subhead_exports %}
     </div>
-    {% block subhead_exports %}
-      {% if request.instance|feature_enabled:'exports' %}
-      <a href="javascript:;" class="btn btn-primary btn-xs exportBtn"
-         data-export-start-url="{% url 'begin_export' instance_url_name=request.instance.url_name model='tree' %}">
-        <i class="icon-export"></i> {% trans "Export Search Results" %}
-      </a>
-      {% endif %}
-    {% endblock subhead_exports %}
-    {% if request.instance|feature_enabled:'add_plot' and last_effective_instance_user %}
-      {% if request.instance.supports_resources %}
+    <div class="half">
+      {% if request.instance|feature_enabled:'add_plot' and last_effective_instance_user %}
+        {% if request.instance.supports_resources %}
+        <a class="btn btn-primary addBtn"
+           data-action='addresource'
+           data-feature="add_plot"
+           data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+           data-disabled-title=
+             "{% blocktrans with resources=terms.resources %}Adding {{ resources }} is not available to all users {% endblocktrans %}"
+           data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
+           disabled="disabled"><i class="icon-plus"></i> {% trans "Add a" %} {{ term.Resource }}</a>
+        {% endif %}
       <a class="btn btn-primary addBtn"
-         data-action='addresource'
+         data-action='addtree'
          data-feature="add_plot"
          data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
-         data-disabled-title=
-           "{% blocktrans with resources=terms.resources %}Adding {{ resources }} is not available to all users {% endblocktrans %}"
-         data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
-         disabled="disabled"><i class="icon-plus"></i> {% trans "Add a" %} {{ term.Resource }}</a>
+         data-disabled-title="{% trans "Adding trees is not available to all users" %}"
+         data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
+         disabled="disabled"><i class="icon-plus"></i> {% trans "Add a Tree" %}</a>
       {% endif %}
-    <a class="btn btn-primary addBtn"
-       data-action='addtree'
-       data-feature="add_plot"
-       data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
-       data-disabled-title="{% trans "Adding trees is not available to all users" %}"
-       data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
-       disabled="disabled"><i class="icon-plus"></i> {% trans "Add a Tree" %}</a>
-    {% endif %}
+    </div>
   </div>
   {% endwith %}
 </div>
