--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -10,8 +10,12 @@
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
     transition: all 400ms cubic-bezier(0, 0, 0.1, 1);
-    margin-top: 42px;
+    margin-top: 90px;
     box-shadow: 0 6px 0 rgba(0,0,0,.15);
+
+    @media(min-width: 990px){
+        margin-top: 42px;
+    }
 
     &.expanded {
         -ms-transform: translateY(0);
@@ -47,7 +51,7 @@
                 font-weight: 700;
                 position: relative;
             }
-            
+
             @media #{$screen-lg} {
                 label {
                     top: 8px;
@@ -67,7 +71,7 @@
                 }
                 input[type="text"] {
                     width: 92px;
-    
+
                     & + span {
                         margin: 0 10px;
                         font-size: 1.4rem;
@@ -251,8 +255,8 @@
                 text-indent: 0.01px;
                 text-overflow: '';
                 font-family: $base-font-family;
-                
-                
+
+
                 option {
                     color: black;
                     background: white;
@@ -314,15 +318,30 @@
         font-size: 1.6rem;
         font-weight: 300;
         background: lighten($primary-color, 45%);
-        height: 42px;
+        height: 90px;
         position: relative;
         z-index: 9;
         color: darken($primary-color, 25%);
 
+        @media(min-width: 990px){
+            height: 42px;
+        }
         span {
             font-weight: bold;
         }
 
+        .half{
+            position: relative;
+            display: block;
+            width: 100%;
+            padding: 6px;
+
+            @media (min-width: 990px){
+                display: inline;
+                width: inherit;
+                padding: 0px;
+            }
+        }
         .exportBtn {
             margin-left: 10px;
             margin-top: -2px;
@@ -344,7 +363,7 @@
 
 #missing-data,
 #display-filters {
-    span { 
+    span {
         display: block;
     }
 }
