--- a/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
@@ -9,6 +9,9 @@
     right: 0;
     bottom: 0;
 
+    .popover{
+        left: 18px!important;
+    }
     > div {
         height: 100%;
         overflow: auto;
