fixes OpenTreeMap/otm2-addons#296
-Made the instance name column a fixed width with ellipses rather than
a horizontal scroll bar.

--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -84,6 +84,21 @@
         }
     }
 
+    #instances {
+        table {
+            > tbody {
+                > tr {
+                    > td:first-child, th:first-child {
+                        max-width: 140px;
+                        overflow:hidden;
+                        white-space:nowrap;
+                        text-overflow:ellipsis;
+                    }
+                }
+            }
+        }
+    }
+
     input {
         width: 50%;
         margin-bottom: 8px;
