--- a/opentreemap/importer/templates/importer/partials/imports.html
+++ b/opentreemap/importer/templates/importer/partials/imports.html
@@ -41,43 +41,7 @@
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-md-12">
-              <img src="/static/img/spinner.gif" class="spinner pull-right" style="display:none;">
-              <h2>Imports</h2>
-              <hr>
-
-              <h4>Active Tree Imports</h4>
-              {% include 'importer/partials/import_table.html' with things=trees_active id="activetree" import_type="tree" %}
-            </div>
-          </div>
-
-          <br>
-
-          <div class="row">
-            <div class="col-md-12">
-              <h4>Finished Tree Imports</h4>
-              {% include 'importer/partials/import_table.html' with things=trees_finished id="finishedtree" import_type="tree" %}
-            </div>
-          </div>
-
-          <br>
-
-          <div class="row">
-            <div class="col-md-12">
-              <h4>Active Species Imports</h4>
-              {% include 'importer/partials/import_table.html' with things=species_active id="activespecies" import_type="species" %}
-            </div>
-          </div>
-
-          <br>
-
-          <div class="row">
-            <div class="col-md-12">
-              <h4>Finished Species Imports</h4>
-              {% include 'importer/partials/import_table.html' with things=species_finished id="finishedspecies" import_type="species" %}
-            </div>
-          </div>
+          {% include 'importer/partials/import_tables.html' %}
 
           <div class="row">
             <div class="col-md-12">
