Remove camel case from html

--- a/opentreemap/importer/templates/importer/partials/import_tables.html
+++ b/opentreemap/importer/templates/importer/partials/import_tables.html
@@ -37,5 +37,5 @@
     </div>
   </div>
 
-  <input type="hidden" name="importsFinished" value="{{ imports_finished }}">
+  <input type="hidden" name="imports-finished" value="{{ imports_finished }}">
 </div>
