--- a/opentreemap/importer/templates/importer/partials/status.html
+++ b/opentreemap/importer/templates/importer/partials/status.html
@@ -15,7 +15,7 @@
 
               <ul class="nav nav-pills">
                 {% for panel in panels %}
-                  <li{% if forloop.first %} class="active"{% endif %}>
+                  <li{% if panel.name == active_panel_name %} class="active"{% endif %}>
                     <a href="#import-panel-{{ panel.name }}" data-toggle="tab">
                       {{ panel.title }} ({{ panel.row_count }})
                     </a>
@@ -25,7 +25,7 @@
 
               <div class="tab-content">
                 {% for panel in panels %}
-                  <div class="tab-pane {% if forloop.first %}active{% endif %}"
+                  <div class="tab-pane {% if panel.name == active_panel_name %}active{% endif %}"
                        id="import-panel-{{ panel.name }}">
                     {% include "importer/partials/status_table.html" %}
                   </div>
