--- a/opentreemap/importer/templates/importer/partials/status_table.html
+++ b/opentreemap/importer/templates/importer/partials/status_table.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-<div  style="overflow-x: scroll;">
-    <table class="table table-striped">
+<div  class="tab-contents">
+    <table class="table table-hover">
         <thead>
             <tr>
                 {% for name in panel.field_names %}
