--- a/opentreemap/importer/templates/importer/partials/import_table.html
+++ b/opentreemap/importer/templates/importer/partials/import_table.html
@@ -1,4 +1,4 @@
-<table class="table table-striped">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>Import Event</th>
