--- a/opentreemap/importer/templates/importer/partials/row_status.html
+++ b/opentreemap/importer/templates/importer/partials/row_status.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block main %}
-<ul class="nav nav-pills">
+<ul class="nav nav-tabs">
 {% for panel in panels %}
   <li{% if panel.name == active_panel_name %} class="active"{% endif %}>
     <a href="#import-panel-{{ panel.name }}" data-toggle="tab">
@@ -23,7 +23,8 @@
 {% endblock main %}
 
 {% block extra_buttons %}
-  <a data-action="commit" class="btn btn-success btn-large" href="{{ commit_url }}">
+  <a data-action="commit" class="btn btn-info btn-large" href="{{ commit_url }}">
+    <i class="icon-plus-circled"></i>
     {% trans "Add to Tree Map" %}
   </a>
 {% endblock extra_buttons %}
